# cloak

./: .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: release.yml
cmd/cloak/: main.go
integration/: pipeline_test.go
internal/pipeline/: config.go  match.go  pipeline.go
internal/redact/: pipeline.go  pipeline_test.go
internal/stages/ner/: stage.go
internal/stages/regex/: patterns.go  stage.go  validate.go  validate_test.go
internal/stages/secrets/: allowlist_test.go  detect_test.go  entropy.go  entropy_test.go  rule.go  rules_test.go  stage.go  stopwords.go  vendors.go
nerd/: Cargo.toml  README.md
nerd/src/: main.rs
scripts/: benchmark_model.py  export_model.py  parity_check.py  requirements.txt
scripts/training/: augment.py  build_combined.py  fewnerd_to_jsonl.py  label_map.py  prepare_dataset.py  requirements.txt  split_dataset.py  train_model.py
testdata/: README.md  benchmark_cases.jsonl
testdata/ci/: deploy.yml
testdata/config/: app-config.go  docker-compose.yml  setup-env.sh
testdata/docs/: README.md
testdata/infra/: variables.tf
testdata/services/: ai.ts  notification.ts
tests/: pipeline_test.go  validate_test.go
